# wezterm-lua-defs

./: .gitignore  Cargo.toml  LICENSE  README.md  dev.ps1  out.ps1  wezterm.d.lua
src/: main.rs
